responsive navbar,main & banner

--- a/index.html
+++ b/index.html
@@ -25,31 +25,38 @@
     <header class="header">
         <nav class="nav">
             <div class="container">
-                <a href="" class="nav_logo">nhaus media</a>
+                <a href="" class="nav__logo">nhaus media</a>
 
-                <ul class="nav_menu">
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink active" href="#">explore</a>
+                <ul class="nav__menu" id="navMenu">
+                    <li class="nav__menuItem">
+                        <a class="nav__menuLink" href="#">explore</a>
                     </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">pricing</a>
+                    <li class="nav__menuItem">
+                        <a class="nav__menuLink" href="#">pricing</a>
                     </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">carrer</a>
+                    <li class="nav__menuItem">
+                        <a class="nav__menuLink" href="#">carrer</a>
                     </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">about</a>
+                    <li class="nav__menuItem">
+                        <a class="nav__menuLink" href="#">about</a>
                     </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">social Media</a>
+                    <li class="nav__menuItem">
+                        <a class="nav__menuLink" href="#">social Media</a>
                     </li>
                 </ul>
+
                 <button class="button button__black">
                     <a class="button__link" href="#">Try for free</a>
+                </button>
+
+                <button class="nav__toggleBtn" id="navToggleBtn">
+                    <span class="material-symbols-outlined">
+                        menu
+                    </span>
                 </button>
             </div>
         </nav>
@@ -87,7 +94,7 @@
         </section>
 
         <!-- About Section  -->
-        <section class="about">
+        <!-- <section class="about">
             <div class="container">
                 <h4 class="section__titleLable">about us</h4>
                 <section class="about__contentLeft">
@@ -123,10 +130,10 @@
                     </button>
                 </section>
             </div>
-        </section>
+        </section> -->
 
         <!-- Projects Section  -->
-        <section class="projects">
+        <!-- <section class="projects">
             <div class="container">
                 <p class="section__titleLable">our project</p>
                 <section class="projects__content">
@@ -217,10 +224,10 @@
                     <a href="" class="button__link"> explore pricing</a>
                 </button>
             </div>
-        </section>
+        </section> -->
 
         <!-- Stories Section  -->
-        <section class="stories">
+        <!-- <section class="stories">
             <div class="container">
                 <h4 class="section__titleLable">our stories</h4>
                 <section class="stories__contentLeft">
@@ -247,10 +254,10 @@
                     </div>
                 </section>
             </div>
-        </section>
+        </section> -->
 
         <!-- Why Choose us Section  -->
-        <section class="whyChoose">
+        <!-- <section class="whyChoose">
             <div class="container">
                 <h4 class="section__titleLable">why choose us</h4>
                 <h3 class="section__title">We have all the mandatory aspects</h3>
@@ -306,10 +313,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- Testimonials   -->
-        <section class="testimonials">
+        <!-- <section class="testimonials">
             <div class="container">
                 <h3 class="section__titleLable">testimonials</h3>
 
@@ -373,10 +380,10 @@
                 </ul>
 
             </div>
-        </section>
+        </section> -->
 
         <!-- Blog   -->
-        <section class="blog">
+        <!-- <section class="blog">
             <div class="container">
                 <h3 class="section__titleLable">our bloh</h3>
                 <h2 class="section__title">Latest News & Career</h2>
@@ -483,20 +490,20 @@
                 </button>
             </div>
 
-        </section>
+        </section> -->
 
         <!-- Jumbotron   -->
-        <section class="jumbotron">
+        <!-- <section class="jumbotron">
             <div class="container">
                 <h2 class="section__title section__title-white">Start your journey with us now</h2>
                 <button class="button button__whiteBorderless">
                     <a href="#" class="button__link">explore all</a>
                 </button>
             </div>
-        </section>
+        </section> -->
 
         <!-- FAQ   -->
-        <section class="faq">
+        <!-- <section class="faq">
             <div class="container">
                 <section class="faq__questions">
                     <h2 class="section__title section__title-upercase">got Questions? we got answers</h2>
@@ -581,10 +588,10 @@
                     </a>
                 </section>
             </div>
-        </section>
+        </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <section class="footer__section">
                 <p class="footer__subtitle">phone</p>
@@ -623,11 +630,11 @@
                     Quibusdam sed inventore ducimus earum, fuga odio. Nisi ipsam provident sint aliquid hic
                     exercitationem voluptatem ratione recusandae voluptatibus!
                 </p>
-            </section> 
+            </section>
 
             <p class="footer__copyright">&copy All rights reserved 2022 - designed by digital, powered by webflow</p>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="./vendor/js/scripts.js"></script>
 </body>
