responsive about, projects, stories, whychoose

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
 
         <!-- About Section  -->
-        <!-- <section class="about">
+       <section class="about">
             <div class="container">
                 <h4 class="section__titleLable">about us</h4>
                 <section class="about__contentLeft">
@@ -130,10 +130,10 @@
                     </button>
                 </section>
             </div>
-        </section> -->
+        </section>
 
         <!-- Projects Section  -->
-        <!-- <section class="projects">
+      <section class="projects">
             <div class="container">
                 <p class="section__titleLable">our project</p>
                 <section class="projects__content">
@@ -224,10 +224,10 @@
                     <a href="" class="button__link"> explore pricing</a>
                 </button>
             </div>
-        </section> -->
+        </section>
 
         <!-- Stories Section  -->
-        <!-- <section class="stories">
+         <section class="stories">
             <div class="container">
                 <h4 class="section__titleLable">our stories</h4>
                 <section class="stories__contentLeft">
@@ -254,10 +254,10 @@
                     </div>
                 </section>
             </div>
-        </section> -->
+        </section>
 
         <!-- Why Choose us Section  -->
-        <!-- <section class="whyChoose">
+        <section class="whyChoose">
             <div class="container">
                 <h4 class="section__titleLable">why choose us</h4>
                 <h3 class="section__title">We have all the mandatory aspects</h3>
@@ -313,7 +313,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- Testimonials   -->
         <!-- <section class="testimonials">
