Rsponsive blog, jumbotron, testimonials

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
 
         <!-- About Section  -->
-       <section class="about">
+        <section class="about">
             <div class="container">
                 <h4 class="section__titleLable">about us</h4>
                 <section class="about__contentLeft">
@@ -133,7 +133,7 @@
         </section>
 
         <!-- Projects Section  -->
-      <section class="projects">
+        <section class="projects">
             <div class="container">
                 <p class="section__titleLable">our project</p>
                 <section class="projects__content">
@@ -227,7 +227,7 @@
         </section>
 
         <!-- Stories Section  -->
-         <section class="stories">
+        <section class="stories">
             <div class="container">
                 <h4 class="section__titleLable">our stories</h4>
                 <section class="stories__contentLeft">
@@ -316,7 +316,7 @@
         </section>
 
         <!-- Testimonials   -->
-        <!-- <section class="testimonials">
+        <section class="testimonials">
             <div class="container">
                 <h3 class="section__titleLable">testimonials</h3>
 
@@ -373,71 +373,22 @@
                     <li class="testimonials__item">
                         <img class="testimonial__brand" src="./vendor/icons/Asana.svg" alt="Asana Logo">
                     </li>
-                    <li class="testimonials__item">
-                        <img class="testimonial__brand" src="" alt="">
-                    </li>
-
                 </ul>
 
             </div>
-        </section> -->
+        </section>
 
         <!-- Blog   -->
-        <!-- <section class="blog">
+        <section class="blog">
             <div class="container">
-                <h3 class="section__titleLable">our bloh</h3>
+                <h3 class="section__titleLable">our blog</h3>
                 <h2 class="section__title">Latest News & Career</h2>
                 <ul class="blog__list">
                     <li class="blog__item">
                         <a href="" class="blog__link">
-                            <img class="blog__image" src="./vendor/images/house_01.jpg" alt="House Image">
-                            <div class="blog__wrap">
-                                <section class="blog__content">
-                                    <div class="blog__info">
-                                        <p class="blog__infoText">6 September, 2022</p>
-                                        <p class="blog__infoText">Al Rasi Siam</p>
-                                    </div>
-
-                                    <h4 class="blog__title">
-                                        Archito will ready in less than a year to make your
-                                        property
-                                    </h4>
-                                    <p class="section__text">
-                                        When applied to building block a website or similar work product, a Visual gGide
-                                        can...
-                                    </p>
-                                </section>
+                            <div class="blog__wrapImage">
+                                <img class="blog__image" src="./vendor/images/house_01.jpg" alt="House Image">
                             </div>
-                        </a>
-                    </li>
-
-                    <li class="blog__item">
-                        <a href="" class="blog__link">
-                            <img class="blog__image" src="./vendor/images/house_04.jpg" alt="House Image">
-
-                            <div class="blog__wrap">
-                                <section class="blog__content">
-                                    <div class="blog__info">
-                                        <p class="blog__infoText">6 September, 2022</p>
-                                        <p class="blog__infoText">Al Rasi Siam</p>
-                                    </div>
-
-                                    <h4 class="blog__title">
-                                        Archito will ready in less than a year to make your
-                                        property
-                                    </h4>
-                                    <p class="section__text">
-                                        When applied to building block a website or similar work product, a Visual gGide
-                                        can...
-                                    </p>
-                                </section>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="blog__item">
-                        <a href="" class="blog__link">
-                            <img class="blog__image" src="./vendor/images/house_03.jpg" alt="House Image">
 
                             <div class="blog__wrap">
                                 <section class="blog__content">
@@ -461,7 +412,61 @@
 
                     <li class="blog__item">
                         <a href="" class="blog__link">
-                            <img class="blog__image" src="./vendor/images/house_02.jpg" alt="House Image">
+                            <div class="blog__wrapImage">
+                                <img class="blog__image" src="./vendor/images/house_04.jpg" alt="House Image">
+                            </div>
+
+                            <div class="blog__wrap">
+                                <section class="blog__content">
+                                    <div class="blog__info">
+                                        <p class="blog__infoText">6 September, 2022</p>
+                                        <p class="blog__infoText">Al Rasi Siam</p>
+                                    </div>
+
+                                    <h4 class="blog__title">
+                                        Archito will ready in less than a year to make your
+                                        property
+                                    </h4>
+                                    <p class="section__text">
+                                        When applied to building block a website or similar work product, a Visual gGide
+                                        can...
+                                    </p>
+                                </section>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="blog__item">
+                        <a href="" class="blog__link">
+                            <div class="blog__wrapImage">
+                                <img class="blog__image" src="./vendor/images/house_03.jpg" alt="House Image">
+                            </div>
+
+                            <div class="blog__wrap">
+                                <section class="blog__content">
+                                    <div class="blog__info">
+                                        <p class="blog__infoText">6 September, 2022</p>
+                                        <p class="blog__infoText">Al Rasi Siam</p>
+                                    </div>
+
+                                    <h4 class="blog__title">
+                                        Archito will ready in less than a year to make your
+                                        property
+                                    </h4>
+                                    <p class="section__text">
+                                        When applied to building block a website or similar work product, a Visual gGide
+                                        can...
+                                    </p>
+                                </section>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="blog__item">
+                        <a href="" class="blog__link">
+                            <div class="blog__wrapImage">
+                                <img class="blog__image" src="./vendor/images/house_02.jpg" alt="House Image">
+                            </div>
 
                             <div class="blog__wrap">
                                 <section class="blog__content">
@@ -490,17 +495,20 @@
                 </button>
             </div>
 
-        </section> -->
+        </section>
 
         <!-- Jumbotron   -->
-        <!-- <section class="jumbotron">
+        <section class="jumbotron">
             <div class="container">
-                <h2 class="section__title section__title-white">Start your journey with us now</h2>
-                <button class="button button__whiteBorderless">
-                    <a href="#" class="button__link">explore all</a>
-                </button>
+                <div class="jumbotron__wrap">
+                    <h2 class="section__title section__title-white">Start your journey with us now</h2>
+                    <button class="button button__whiteBorderless">
+                        <a href="#" class="button__link">explore all</a>
+                    </button>
+
+                </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- FAQ   -->
         <!-- <section class="faq">
